# SpaceCompanySimulation

./: README.md  SpaceCompanySimulation.lnk  SpaceCompanySimulation.sln  SpaceCompanySimulation.vcxproj  SpaceCompanySimulation.vcxproj.filters  main.cpp  packages.config
Simulation/: Simulation.cpp  Simulation.hpp  info.json  main.cpp
Simulation/Features/: Balance.hpp  EarthStation.cpp  EarthStation.hpp  Random.hpp  SpaceShipStatus.hpp
Simulation/Models/Planets/: MarsPlanet.cpp  MarsPlanet.hpp  MercuryPlanet.hpp  PlanetAbstract.hpp  VenusPlanet.cpp  VenusPlanet.hpp
Simulation/Models/Ships/: ExplorerSpaceShip.cpp  MiningSpaceShip.cpp  MiningSpaceShip.hpp  PassengerSpaceShip.cpp  PassengerSpaceShip.hpp
Simulation/Models/SolarSystem/: AsteroidCluster.hpp  SolarSystem.cpp  SolarSystem.hpp
Simulation/Models/SolarSystem/Planets/: JupiterPlanet.cpp  JupiterPlanet.hpp  MarsPlanet.cpp  MarsPlanet.hpp  MercuryPlanet.cpp  MercuryPlanet.hpp  NeptunePlanet.cpp  NeptunePlanet.hpp  PlanetAbstract.hpp  SaturnPlanet.cpp  SaturnPlanet.hpp  UranusPlanet.cpp  UranusPlanet.hpp  VenusPlanet.cpp  VenusPlanet.hpp
Simulation/Models/SolarSystem/Ships/: ExplorerSpaceShip.cpp  ExplorerSpaceShip.hpp  MiningSpaceShip.cpp  MiningSpaceShip.hpp  PassengerSpaceShip.cpp  PassengerSpaceShip.hpp  SpaceShipAbstract.hpp  SpaceShipStatus.hpp  SpaceShipType.hpp
Simulation/Models/SolarSystem/Stars/: StarsAbstract.hpp  SunStar.cpp  SunStar.hpp
SpaceCom.ecc3904e/x64/Debug/: SpaceCompanySimulation.exe.recipe  SpaceCompanySimulation.ilk  vc143.idb
SpaceCom.ecc3904e/x64/Debug/SpaceCom.ecc3904e.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SpaceCompanySimulation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SpaceCompanySimulationCMake/: CMakeLists.txt  HowToInstallCatch2.txt  TestLog.txt
SpaceCompanySimulationCMake/Tests/: TestRunner.hpp  main.test.cpp  test.cpp
SpaceCompanySimulationCMake/Tests/Features/: balance.test.cpp  earthStation.test.cpp  random.test.cpp  thread.test.cpp
SpaceCompanySimulationCMake/Tests/Simulation/Planets/: jupiterPlanet.test.cpp  marsPlanet.test.cpp  mercuryPlanet.test.cpp  neptunePlanet.test.cpp  planetAbstract.test.cpp  saturnPlanet.test.cpp  uranusPlanet.test.cpp  venusPlanet.test.cpp
SpaceCompanySimulationCMake/Tests/Simulation/Ships/: spaceShipAbstract.test.cpp
SpaceCompanySimulationCMake/Tests/Simulation/SolarSystem/: asteroidCluster.test.cpp  solarSystem.test.cpp
SpaceCompanySimulationCMake/Tests/Simulation/Stars/: sunStar.test.cpp
Threads/: Thread.hpp  Threads.cpp
